fix the labels collapsong and misaligning in viewport 520px and below

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,13 +126,16 @@ button#submit:hover{
 
     .content-right{
         float: left;
-        widows: 80%;
+        width: 80%;
     }
 
-    input.userDetails{
+    input.userDetails,textarea{
         width:100%;
     }
 
+    select{
+        width:90%;
+    }
 
 
     
